@@ -154,20 +154,6 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|SegmentInfoPerCommit
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|IndexReader
 import|;
 end_import
@@ -187,20 +173,6 @@ operator|.
 name|index
 operator|.
 name|IndexWriter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableField
 import|;
 end_import
 
@@ -289,6 +261,7 @@ end_comment
 begin_class
 DECL|class|NRTManager
 specifier|public
+specifier|final
 class|class
 name|NRTManager
 extends|extends
@@ -1430,10 +1403,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|afterRefresh
+DECL|method|afterMaybeRefresh
 specifier|protected
 name|void
-name|afterRefresh
+name|afterMaybeRefresh
 parameter_list|()
 block|{
 name|genLock
