@@ -42,6 +42,28 @@ name|java
 operator|.
 name|util
 operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CopyOnWriteArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|locks
@@ -117,6 +139,22 @@ name|refreshLock
 init|=
 operator|new
 name|ReentrantLock
+argument_list|()
+decl_stmt|;
+DECL|field|refreshListeners
+specifier|private
+specifier|final
+name|List
+argument_list|<
+name|RefreshListener
+argument_list|>
+name|refreshListeners
+init|=
+operator|new
+name|CopyOnWriteArrayList
+argument_list|<
+name|RefreshListener
+argument_list|>
 argument_list|()
 decl_stmt|;
 DECL|method|ensureOpen
@@ -314,6 +352,11 @@ operator|.
 name|lock
 argument_list|()
 expr_stmt|;
+name|boolean
+name|refreshed
+init|=
+literal|false
+decl_stmt|;
 try|try
 block|{
 specifier|final
@@ -347,11 +390,6 @@ name|reference
 operator|:
 literal|"refreshIfNeeded should return null if refresh wasn't needed"
 assert|;
-name|boolean
-name|success
-init|=
-literal|false
-decl_stmt|;
 try|try
 block|{
 name|swapReference
@@ -359,7 +397,7 @@ argument_list|(
 name|newReference
 argument_list|)
 expr_stmt|;
-name|success
+name|refreshed
 operator|=
 literal|true
 expr_stmt|;
@@ -369,7 +407,7 @@ block|{
 if|if
 condition|(
 operator|!
-name|success
+name|refreshed
 condition|)
 block|{
 name|release
@@ -389,9 +427,18 @@ name|reference
 argument_list|)
 expr_stmt|;
 block|}
-name|afterRefresh
+name|afterMaybeRefresh
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|refreshed
+condition|)
+block|{
+name|notifyRefreshListeners
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
@@ -483,11 +530,11 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-comment|/** Called after swapReference has installed a new    *  instance.    *  @throws IOException if a low level I/O exception occurs      **/
-DECL|method|afterRefresh
+comment|/** Called after a refresh was attempted, regardless of    *  whether a new reference was in fact created.    *  @throws IOException if a low level I/O exception occurs      **/
+DECL|method|afterMaybeRefresh
 specifier|protected
 name|void
-name|afterRefresh
+name|afterMaybeRefresh
 parameter_list|()
 throws|throws
 name|IOException
@@ -515,6 +562,106 @@ argument_list|(
 name|reference
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|notifyRefreshListeners
+specifier|private
+name|void
+name|notifyRefreshListeners
+parameter_list|()
+block|{
+for|for
+control|(
+name|RefreshListener
+name|refreshListener
+range|:
+name|refreshListeners
+control|)
+block|{
+name|refreshListener
+operator|.
+name|afterRefresh
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Adds a listener, to be notified when a reference is refreshed/swapped.    */
+DECL|method|addListener
+specifier|public
+name|void
+name|addListener
+parameter_list|(
+name|RefreshListener
+name|listener
+parameter_list|)
+block|{
+if|if
+condition|(
+name|listener
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|(
+literal|"Listener cannot be null"
+argument_list|)
+throw|;
+block|}
+name|refreshListeners
+operator|.
+name|add
+argument_list|(
+name|listener
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Remove a listener added with {@link #addListener(RefreshListener)}.    */
+DECL|method|removeListener
+specifier|public
+name|void
+name|removeListener
+parameter_list|(
+name|RefreshListener
+name|listener
+parameter_list|)
+block|{
+if|if
+condition|(
+name|listener
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|(
+literal|"Listener cannot be null"
+argument_list|)
+throw|;
+block|}
+name|refreshListeners
+operator|.
+name|remove
+argument_list|(
+name|listener
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Use to receive notification when a refresh has    *  finished.  See {@link #addListener}. */
+DECL|interface|RefreshListener
+specifier|public
+interface|interface
+name|RefreshListener
+block|{
+comment|/**      * Called after a successful refresh and a new reference has been installed. When this is called {@link #acquire()} is guaranteed to return a new instance.      */
+DECL|method|afterRefresh
+name|void
+name|afterRefresh
+parameter_list|()
+function_decl|;
 block|}
 block|}
 end_class
