@@ -1773,6 +1773,141 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testListenerCalled
+specifier|public
+name|void
+name|testListenerCalled
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|AtomicBoolean
+name|afterRefreshCalled
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|SearcherManager
+name|sm
+init|=
+operator|new
+name|SearcherManager
+argument_list|(
+name|iw
+argument_list|,
+literal|false
+argument_list|,
+operator|new
+name|SearcherFactory
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|sm
+operator|.
+name|addListener
+argument_list|(
+operator|new
+name|ReferenceManager
+operator|.
+name|RefreshListener
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|afterRefresh
+parameter_list|()
+block|{
+name|afterRefreshCalled
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|afterRefreshCalled
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|sm
+operator|.
+name|maybeRefreshBlocking
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|afterRefreshCalled
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|sm
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|testEvilSearcherFactory
 specifier|public
 name|void
